--- a/medium/index.html
+++ b/medium/index.html
@@ -36,14 +36,13 @@ p {
   line-height: 1.75rem;
 }
 #twitter-share-btn {
-  width: 2.5rem;
+  width: 5.5rem;
   height: 2.5rem;
   font-size: 1.25rem;
-  color: #56b8f5;
-  background-color: #fff;
+  color: white;
+  background-color:black;
   cursor: pointer;
   border: 2px solid #56b8f5;
-  border-radius: 50%;
   position: absolute;
   top: 0;
   left: 0;
@@ -87,19 +86,17 @@ p {
 }
 </style>
 <body>
-
 	<div class="container">
   <h1>Sharing Selected Text</h1>
   <h2 class="selectable-text-area">Select the text you want to share</h2>
   <hr>
   <div class="selectable-text-area">
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae <a href="#">libero</a> pariatur eos aperiam saepe, beatae necessitatibus exercitationem, nemo, sit provident possimus debitis modi eligendi repellat iure vitae perferendis? Recusandae accusamus placeat velit itaque quis fuga laudantium debitis, ab eaque voluptatum illo esse incidunt! Quia tempore explicabo sint laboriosam rerum nihil voluptates voluptatibus voluptate iure. Earum magnam blanditiis voluptates quod ex exercitationem reiciendis, iure qui ducimus similique impedit nemo est, quisquam facere id adipisci harum tenetur consequuntur illum saepe laudantium. Suscipit facilis corporis natus aperiam! Reprehenderit hic quia natus nisi similique quod fugiat, architecto autem deleniti unde commodi accusamus modi voluptate?</p>
-    <p>Corporis iste ex minus vitae sit, quo illo beatae expedita distinctio modi eum eos officiis dicta soluta? This part is brilliant, let's share!! Illum, ducimus? Animi voluptate incidunt atque ipsa odit aperiam vero asperiores esse repellendus eveniet, molestiae minima optio dolor eum distinctio non perferendis sunt officiis corrupti similique et expedita saepe? Dolore, est. Tempore nisi beatae quasi quibusdam excepturi necessitatibus deleniti quas, consequuntur saepe sapiente quia, eligendi magni quod, dolores aspernatur ad sint! Nihil cupiditate atque enim esse hic laudantium, doloribus commodi fugit minus quasi nam laboriosam ipsum ex voluptatum recusandae ratione ullam, ducimus id quisquam placeat inventore aliquam in! Molestias quam maiores ipsa sequi.</p>
-    <p>Nam nisi inventore in officiis atque qui earum illo, quod laboriosam vitae quo blanditiis voluptatibus enim hic vero iure consectetur rerum deserunt deleniti? Laborum dolores cum mollitia veritatis, sequi id doloribus cupiditate asperiores minus delectus veniam porro hic optio vero ipsum cumque enim ratione animi? Saepe adipisci sapiente architecto, voluptatem reprehenderit sed esse, vel voluptas accusamus atque non neque inventore velit quidem nostrum ipsa quod repudiandae pariatur cum corporis quis molestias. Officiis labore id officia aperiam corrupti. Non veniam rem quod deserunt excepturi autem, assumenda recusandae beatae quos nihil praesentium repellendus voluptatum itaque reiciendis facere, incidunt adipisci, eligendi architecto pariatur!</p>
-    <p>Incidunt aspernatur unde enim, laboriosam velit voluptatem, dolores, et ut porro sapiente eius vel itaque quae nemo. Aut sequi maxime harum quod magni doloribus fugiat, impedit ullam et esse explicabo reprehenderit adipisci eos numquam commodi unde nihil expedita sed similique quaerat molestiae sapiente iure eveniet est. Recusandae, itaque sint harum minus vitae odio rerum deleniti eaque odit adipisci nihil quae veniam eos voluptas architecto non voluptate. Eum voluptatem necessitatibus doloremque ratione architecto voluptatum, totam dolorem ut non consequuntur et porro id qui labore voluptas tempora? Numquam dicta corrupti, laborum a cupiditate ab animi aut odit iure quia obcaecati ipsum temporibus.</p>
+   <p>
+   	select somethin from here
+   </p>
   </div>
 </div>
-<button id="twitter-share-btn"><i class="fab fa-twitter" aria-label="Share on Twitter"></i></button>
+<div id="twitter-share-btn">Share</button>
 <script type="text/javascript">
 	const selectableTextArea = document.querySelectorAll(".selectable-text-area");
 const twitterShareBtn = document.querySelector("#twitter-share-btn");
