--- a/medium/index.html
+++ b/medium/index.html
@@ -3,12 +3,14 @@
 <head>
 	<title></title>
 </head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
 	* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #fff;
@@ -42,18 +44,20 @@ p {
   color: white;
   background-color:black;
   cursor: pointer;
-  border: 2px solid #56b8f5;
+  border: 2px solid black;
   position: absolute;
   top: 0;
   left: 0;
   z-index: 10;
   display: none;
   transition: color 0.2s, background-color 0.2s ease-in-out;
+  padding: 3px 3px 3px 3px;
 }
-#twitter-share-btn:hover {
-  color: #fff;
-  background-color: #56b8f5;
+#twitter-share-btn  ul li{
+	list-style: none;
+	display: inline-block;
 }
+
 #twitter-share-btn i {
   pointer-events: none;
 }
@@ -85,18 +89,25 @@ p {
   hr { margin: 1.5rem 0; }
 }
 </style>
-<body>
+<body style="background: #ebebeb ; position: relative;">
 	<div class="container">
-  <h1>Sharing Selected Text</h1>
-  <h2 class="selectable-text-area">Select the text you want to share</h2>
-  <hr>
   <div class="selectable-text-area">
    <p>
-   	select somethin from here
+Google offers a set of client libraries for calling Google APIs in a variety of languages like Python, Java, and Node.
+GAPI is Google’s client library for browser-side JavaScript. It’s used in Google Sign-in, Google Drive, and thousands of internal and external web pages for easily connecting with Google APIs.
+First launched at Google I/O in 2012 to provide easy Google identity and API access, the client library is now used for thousands of domains and currently handles billions of Google API queries every day.
+Getting Started with GAPI
+The beautiful part about GAPI is that you do not need to download any library to use the API client. In an HTML file, simply include this script tag:
    </p>
   </div>
 </div>
-<div id="twitter-share-btn">Share</button>
+<div id="twitter-share-btn">
+	<ul>
+		<li><a><i class="fa fa-pencil"></i></a></li>
+		<li><a><i class="fa fa-twitter"></i></a></li>
+		<li><button onclick="showdiv()"><i class="fa fa-comment"></i></button></li>
+	</ul>
+</div>
 <script type="text/javascript">
 	const selectableTextArea = document.querySelectorAll(".selectable-text-area");
 const twitterShareBtn = document.querySelector("#twitter-share-btn");
@@ -105,10 +116,7 @@ selectableTextArea.forEach(elem => {
   elem.addEventListener("mouseup", selectableTextAreaMouseUp);
 });
 
-twitterShareBtn.addEventListener("click", twitterShareBtnClick);
-
-document.addEventListener("mousedown", documentMouseDown);
-
+//document.addEventListener("mousedown", documentMouseDown);
 function selectableTextAreaMouseUp(event) {
   setTimeout(() => { // In order to avoid some weird behavior...
     const selectedText = window.getSelection().toString().trim();
@@ -117,7 +125,6 @@ function selectableTextAreaMouseUp(event) {
       const y = event.pageY;
       const twitterShareBtnWidth = Number(getComputedStyle(twitterShareBtn).width.slice(0,-2));
       const twitterShareBtnHeight = Number(getComputedStyle(twitterShareBtn).height.slice(0,-2));
-
       if(document.activeElement !== twitterShareBtn) {
         twitterShareBtn.style.left = `${x - twitterShareBtnWidth*0.5}px`;
         twitterShareBtn.style.top = `${y - twitterShareBtnHeight*1.25}px`;
@@ -132,12 +139,35 @@ function selectableTextAreaMouseUp(event) {
   }, 0);
 }
 
+function showdiv()
+{
+	 const selectedText = window.getSelection().toString().trim();
+ 	//	alert(selectedText)
+   // documentMouseDown()
+ 	var highlight= document.createElement('div');
+  document.body.appendChild(highlight);
+	highlight.setAttribute("id", "Div1");
+  document.getElementById("Div1").innerHTML=selectedText;
+  document.getElementById("Div1").style.border ='1px solid black'
+    document.getElementById("Div1").style.background ='#ffffff'
+    document.getElementById("Div1").style.width='500px';
+     document.getElementById("Div1").style.height='624px';
+       document.getElementById("Div1").style.position='absolute';
+       document.getElementById("Div1").style.right=0;
+        document.getElementById("Div1").style.top=0;
+          document.getElementById("Div1").style.padding='10px 10px 10px 10px';
+ //  documentMouseDown()  
+ document.addEventListener("mousedown", documentMouseDown);
+
+}
+
 function documentMouseDown(event) {
-  if(event.target.id!=="twitter-share-btn" && getComputedStyle(twitterShareBtn).display==="block") {
+ /* if(event.target.id!=="twitter-share-btn" && getComputedStyle(twitterShareBtn).display==="block") {
     twitterShareBtn.style.display = "none";
     twitterShareBtn.classList.remove("btnEntrance");
     window.getSelection().empty();
   }
+  */
 }
 
 function twitterShareBtnClick(event) {
@@ -150,13 +180,7 @@ function twitterShareBtnClick(event) {
     const hashtags = "helloworld, test, testing";
     const via = "CodingJrney";
     window.open(`${twitterShareUrl}?text="${text}"&url=${currentUrl}&hashtags=${hashtags}&via=${via}`);
-    
-    // Alternatively, we could include everything in the "text" field -> more room to customize the tweet:
-    // window.open(`${twitterShareUrl}?text="${text}" by @${via} ${hashtags.split(",").map(h => "%23"+h.trim()).join(" ")} ${currentUrl}`);
-    
-    // We could also specify new window features:
-    // const newWindowOptions = "height=400,width=550,top=0,left=0,resizable=yes,scrollbars=yes";
-    // window.open(`${twitterShareUrl}?text="${text}"&url=${currentUrl}&hashtags=${hashtags}&via=${via}`, "ShareOnTwitter", newWindowOptions);
+
   }
 }
 </script>
