--- a/medium/index.html
+++ b/medium/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title></title>
 </head>
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
 	* {
@@ -66,6 +67,19 @@ p {
   animation-fill-mode: both;
   animation-name: btnEntrance;
 }
+
+#CommentBody
+{
+  padding-left: 40px;
+}
+#CommentBody div
+{
+  border: 1px solid black;
+  margin-bottom:10px;
+  padding:10px 10px 10px 10px;
+}
+
+
 @keyframes btnEntrance { /* zoomIn */
   0% {
     opacity: 0;
@@ -98,6 +112,37 @@ GAPI is Google’s client library for browser-side JavaScript. It’s used in Go
 First launched at Google I/O in 2012 to provide easy Google identity and API access, the client library is now used for thousands of domains and currently handles billions of Google API queries every day.
 Getting Started with GAPI
 The beautiful part about GAPI is that you do not need to download any library to use the API client. In an HTML file, simply include this script tag:
+Google offers a set of client libraries for calling Google APIs in a variety of languages like Python, Java, and Node.
+GAPI is Google’s client library for browser-side JavaScript. It’s used in Google Sign-in, Google Drive, and thousands of internal and external web pages for easily connecting with Google APIs.
+First launched at Google I/O in 2012 to provide easy Google identity and API access, the client library is now used for thousands of domains and currently handles billions of Google API queries every day.
+Getting Started with GAPI
+The beautiful part about GAPI is that you do not need to download any library to use the API client. In an HTML file, simply include this script tag:
+Google offers a set of client libraries for calling Google APIs in a variety of languages like Python, Java, and Node.
+GAPI is Google’s client library for browser-side JavaScript. It’s used in Google Sign-in, Google Drive, and thousands of internal and external web pages for easily connecting with Google APIs.
+First launched at Google I/O in 2012 to provide easy Google identity and API access, the client library is now used for thousands of domains and currently handles billions of Google API queries every day.
+Getting Started with GAPI
+The beautiful part about GAPI is that you do not need to download any library to use the API client. In an HTML file, simply include this script tag:
+Google offers a set of client libraries for calling Google APIs in a variety of languages like Python, Java, and Node.
+GAPI is Google’s client library for browser-side JavaScript. It’s used in Google Sign-in, Google Drive, and thousands of internal and external web pages for easily connecting with Google APIs.
+First launched at Google I/O in 2012 to provide easy Google identity and API access, the client library is now used for thousands of domains and currently handles billions of Google API queries every day.
+Getting Started with GAPI
+The beautiful part about GAPI is that you do not need to download any library to use the API client. In an HTML file, simply include this script tag:
+Google offers a set of client libraries for calling Google APIs in a variety of languages like Python, Java, and Node.
+GAPI is Google’s client library for browser-side JavaScript. It’s used in Google Sign-in, Google Drive, and thousands of internal and external web pages for easily connecting with Google APIs.
+First launched at Google I/O in 2012 to provide easy Google identity and API access, the client library is now used for thousands of domains and currently handles billions of Google API queries every day.
+Getting Started with GAPI
+The beautiful part about GAPI is that you do not need to download any library to use the API client. In an HTML file, simply include this script tag:
+Google offers a set of client libraries for calling Google APIs in a variety of languages like Python, Java, and Node.
+GAPI is Google’s client library for browser-side JavaScript. It’s used in Google Sign-in, Google Drive, and thousands of internal and external web pages for easily connecting with Google APIs.
+First launched at Google I/O in 2012 to provide easy Google identity and API access, the client library is now used for thousands of domains and currently handles billions of Google API queries every day.
+Getting Started with GAPI
+The beautiful part about GAPI is that you do not need to download any library to use the API client. In an HTML file, simply include this script tag:
+
+Google offers a set of client libraries for calling Google APIs in a variety of languages like Python, Java, and Node.
+GAPI is Google’s client library for browser-side JavaScript. It’s used in Google Sign-in, Google Drive, and thousands of internal and external web pages for easily connecting with Google APIs.
+First launched at Google I/O in 2012 to provide easy Google identity and API access, the client library is now used for thousands of domains and currently handles billions of Google API queries every day.
+Getting Started with GAPI
+The beautiful part about GAPI is that you do not need to download any library to use the API client. In an HTML file, simply include this script tag:
    </p>
   </div>
 </div>
@@ -108,91 +153,10 @@ The beautiful part about GAPI is that you do not need to download any library to
 		<li><button onclick="showdiv()"><i class="fa fa-comment"></i></button></li>
 	</ul>
 </div>
-<script type="text/javascript">
-	const selectableTextArea = document.querySelectorAll(".selectable-text-area");
-const twitterShareBtn = document.querySelector("#twitter-share-btn");
 
-selectableTextArea.forEach(elem => {
-  elem.addEventListener("mouseup", selectableTextAreaMouseUp);
-});
 
-//document.addEventListener("mousedown", documentMouseDown);
-function selectableTextAreaMouseUp(event) {
-  setTimeout(() => { // In order to avoid some weird behavior...
-    const selectedText = window.getSelection().toString().trim();
-    if(selectedText.length) { 
-      const x = event.pageX;
-      const y = event.pageY;
-      const twitterShareBtnWidth = Number(getComputedStyle(twitterShareBtn).width.slice(0,-2));
-      const twitterShareBtnHeight = Number(getComputedStyle(twitterShareBtn).height.slice(0,-2));
-      if(document.activeElement !== twitterShareBtn) {
-        twitterShareBtn.style.left = `${x - twitterShareBtnWidth*0.5}px`;
-        twitterShareBtn.style.top = `${y - twitterShareBtnHeight*1.25}px`;
-        twitterShareBtn.style.display = "block";
-        twitterShareBtn.classList.add("btnEntrance");
-      }
-      else {
-        twitterShareBtn.style.left = `${x-twitterShareBtnWidth*0.5}px`;
-        twitterShareBtn.style.top = `${y-twitterShareBtnHeight*0.5}px`;
-      }
-    }    
-  }, 0);
-}
-
-function showdiv()
-{
-	 const selectedText = window.getSelection().toString().trim();
- 	//	alert(selectedText)
-   // documentMouseDown()
- 	var highlight= document.createElement('div');
-  document.body.appendChild(highlight);
-	highlight.setAttribute("id", "Div1");
-  document.getElementById("Div1").innerHTML=selectedText;
-  document.getElementById("Div1").style.border ='1px solid black'
-    document.getElementById("Div1").style.background ='#ffffff'
-    document.getElementById("Div1").style.width='500px';
-     document.getElementById("Div1").style.height='624px';
-       document.getElementById("Div1").style.position='absolute';
-       document.getElementById("Div1").style.right=0;
-        document.getElementById("Div1").style.top=0;
-          document.getElementById("Div1").style.padding='10px 10px 10px 10px';
- //  documentMouseDown()  
- document.addEventListener("mousedown", documentMouseDown);
-
-}
-
-function documentMouseDown(event) {
- /* if(event.target.id!=="twitter-share-btn" && getComputedStyle(twitterShareBtn).display==="block") {
-    twitterShareBtn.style.display = "none";
-    twitterShareBtn.classList.remove("btnEntrance");
-    window.getSelection().empty();
-  }
-  */
-}
-
-function twitterShareBtnClick(event) {
-  const selectedText = window.getSelection().toString().trim();
-  if(selectedText.length) {
-    // General Twitter Share URL: https://twitter.com/intent/tweet?text={title}&url={url}&hashtags={hash_tags}&via={user_id}
-    const twitterShareUrl = "https://twitter.com/intent/tweet";
-    const text = `${encodeURIComponent(selectedText)}`;
-    const currentUrl = encodeURIComponent(window.location.href);
-    const hashtags = "helloworld, test, testing";
-    const via = "CodingJrney";
-    window.open(`${twitterShareUrl}?text="${text}"&url=${currentUrl}&hashtags=${hashtags}&via=${via}`);
-
-  }
-}
-</script>
+<div class="CommentBody"  id="CommentBody">
+</div>
+<script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
