--- a/medium/index.html
+++ b/medium/index.html
@@ -152,7 +152,7 @@ The beautiful part about GAPI is that you do not need to download any library to
 <div id="twitter-share-btn">
 	<ul>
 		<li><a><i class="fa fa-pencil"></i></a></li>
-		<li><a><i class="fa fa-twitter"></i></a></li>
+		<li><button onclick="shareTwitter()" href=""><i class="fa fa-twitter"></i></button></li>
 		<li><button onclick="showdiv()"><i class="fa fa-comment"></i></button></li>
 	</ul>
 </div>
