--- a/BlogSystemFrontEnd/index.html
+++ b/BlogSystemFrontEnd/index.html
@@ -149,12 +149,12 @@ p {
             <label>
                 Email
             </label>
-                 <input type="email" name="email" id="email">
+                 <input type="email" name="email" id="emailllogin">
                  <br>
                  <label>Password</label>
-                 <input type="password" name="password" id="password">
+                 <input type="password" name="password" id="passwordlogin">
                  <br>
-                 <button >Login</button>
+                 <button  type="submit" id="loginSubmit" >Login</button>
             <br>
             not haveing account?
             <button id="loginClick">Signup</button>
