--- a/BlogSystemFrontEnd/index.html
+++ b/BlogSystemFrontEnd/index.html
@@ -5,6 +5,11 @@
 </head>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <style type="text/css">
 	* {
   padding: 0;
@@ -126,21 +131,21 @@ p {
                 <label>
                     name
                <label>
-                <input type="text" name="name" id="name">
+                <input type="text" name="name" id="name" class="form-control">
                 <br>
                 <label>
                     Email
                 </label>
-                <input type="email" name="email" id="email">
+                <input type="email" name="email" id="email"  class="form-control">
                 <br>
                 <label>Password</label>
-                <input type="password" name="password" id="password">
+                <input type="password" name="password" id="password"  class="form-control">
                 <br>
-                <button type="submit" id="signupsubmit" >SignUp</button>
+                <button type="submit" id="signupsubmit"  class="form-control" >SignUp</button>
                 <br>
                 Already have account?
                 
-                 <button class="login"   id="signClick">Login</button> 
+                 <button class="login"   id="signClick" >Login</button> 
             </form>
         </div>
 
@@ -149,10 +154,10 @@ p {
             <label>
                 Email
             </label>
-                 <input type="email" name="email" id="emailllogin">
+                 <input type="email" name="email" id="emailllogin"  class="form-control">
                  <br>
                  <label>Password</label>
-                 <input type="password" name="password" id="passwordlogin">
+                 <input type="password" name="password" id="passwordlogin"  class="form-control">
                  <br>
                  <button  type="submit" id="loginSubmit" >Login</button>
             <br>
