animation on table row

--- a/slidingdiv/swapdiv.html
+++ b/slidingdiv/swapdiv.html
@@ -11,18 +11,27 @@
             background-color: blue;
             width: 500px;
             height: 200px;
+            padding: 5px 5px 5px 5px;
+            margin: 5px 5px 5px 5px;
+            cursor: move;
         }
         #box2
         {
             background-color: lime;
             width: 500px;
             height: 200px;
+            padding: 5px 5px 5px 5px;
+            margin: 5px 5px 5px 5px;
+            cursor: move;
         }
         #box3
         {
             background-color: mediumorchid;
             width: 500px;
             height: 200px;
+            padding: 5px 5px 5px 5px;
+            margin: 5px 5px 5px 5px;
+            cursor: move;
         }
     </style>
 </head>
@@ -30,15 +39,15 @@
     <div id="parent">
         <div id="box1" class="common" draggable="true" ondragstart="drag(event)" ondrop="drop(event)" ondragover="allowDrop(event)">
             Note 1
-            <img id="drag1" src="https://i.ytimg.com/vi/jo8uP-xc6ZU/maxresdefault.jpg" width="336" height="69" />
+            <img id="drag1" src="https://i.ytimg.com/vi/jo8uP-xc6ZU/maxresdefault.jpg" width="20%"  />
         </div>
         <div id="box2" class="common" draggable="true" ondragstart="drag(event)" ondrop="drop(event)" ondragover="allowDrop(event)">
             Note 2
-            <img id="drag2" src="https://assets.change.org/photos/0/gq/rv/MgGqRvVqwKtctOK-128x128-noPad.jpg?1520699462" width="236" height="49"  />
+            <img id="drag2" src="https://assets.change.org/photos/0/gq/rv/MgGqRvVqwKtctOK-128x128-noPad.jpg?1520699462" width="20%"   />
         </div>
         <div id="box3" class="common" draggable="true" ondragstart="drag(event)" ondrop="drop(event)" ondragover="allowDrop(event)">
             Note 3
-            <img id="drag2" src="https://pbs.twimg.com/profile_images/1146331293753339904/no4aO6Ld_400x400.jpg" width="236" height="49"  />
+            <img id="drag2" src="https://pbs.twimg.com/profile_images/1146331293753339904/no4aO6Ld_400x400.jpg" width="20%"   />
         </div>
         </div>
 </body>
