--- a/css/slidingdiv.html
+++ b/css/slidingdiv.html
@@ -44,7 +44,9 @@ function slideItRight()
 <div id="d2">click here to slide the div</div>
 <div id="d4">click here to slide the div from right</div>
 <div id="d1" style="position:absolute; left:-150px; top:30px">horizontally sliding div</div>
-<div id="d3" style="position:absolute; right:-215px; top:30px">horizontally sliding div  from right</div>
+<div id="d3" style="position:absolute; right:-215px; top:30px">
+  horizontally sliding div  from right
+</div>
 
 </body>
 </html>
