--- a/resizeimg1/resizeImg/index.html
+++ b/resizeimg1/resizeImg/index.html
@@ -39,6 +39,7 @@
     bottom: 0;
     width: 8px;
     cursor: w-resize;
+    background-color: red;
 }
 	</style>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
